--- a/minil.toml
+++ b/minil.toml
@@ -1,5 +1,10 @@
 name = "Type-MoreUtils"
-badges = ["github-actions/test.yml"]
+authority = "cpan:KFLY"
+badges = ["github-actions/test.yml", "coveralls", "metacpan"]
 module_maker="ModuleBuildTiny"
 static_install = "auto"
 
+markdown_maker = "Pod::Markdown::Github"
+
+[release]
+branch = "main"
